# APC

Assignments/Challenge_1/: CMakeLists.txt  Matrix.cpp  Matrix.h  TestValues.h  main.cpp
Assignments/Challenge_2/DataFrameChallenge2_BASE/: CMakeLists.txt  Column.cpp  Column.h  DataFrame.cpp  DataFrame.h  TestValues4.h  main.cpp
Assignments/Final commits/C1/: CMakeLists.txt  Matrix.h
Exercise sessions/ComplexImpl/: CMakeLists.txt
Exercise sessions/ComplexImpl/LectImpl/: Complex.cpp  compl_main.cpp
Exercise sessions/Ex10_Employees/Employee/: CMakeLists.txt  Developer.cpp  Developer.hh  Employee.hh  Manager.cpp  Manager.hh  Secretary.cpp  Secretary.hh  (+1 more)
Exercise sessions/Ex12_KMeans/: CMakeLists.txt  Centroid.h  Clustering.h  Point.h
Exercise sessions/Ex13_Tensors/: CMakeLists.txt  Tensor.cpp  Tensor.h  main.cpp
Exercise sessions/Ex14_DataFrame/: CMakeLists.txt  DataFrame.h
Exercise sessions/Ex16_Taxi_CallCenter/: CMakeLists.txt  callcenter.cpp  callcenter.h
Exercise sessions/Ex2_Library/: CMakeLists.txt  Library.h
Exercise sessions/Ex4_Gradient_descent/: CMakeLists.txt  Function.cpp  Monomials.h  Point.cpp  Point.h
Exercise sessions/Ex6_Root_finder/: Bisection.cpp  Bisection.h  CMakeLists.txt  Function.cpp  Robust.h  RootFinder.cpp  RootFinder.h  restructured_main.cpp
Exercise sessions/Ex7_Interpolation/: LinearInterpolation.cpp  LinearInterpolation.h  NearestNeighborInterpolation.h  StepwiseInterpolation.cpp  StepwiseInterpolation.h
Exercise sessions/Ex8_Matrix_Comp/: block.hpp  dense_matrix.cpp  matrix.hpp
Exercise sessions/Gradient_descent/: CMakeLists.txt  Function.h  FunctionMin.cpp  FunctionMin.h  Monomials.cpp  main.cpp
Exercise sessions/Interpolation/: Interpolation.cpp  Interpolation.h  NearestNeighborInterpolation.cpp  main.cpp
Exercise sessions/KMeans-initial/: Centroid.cpp  Clustering.cpp
Exercise sessions/Matrix_Comp/: block.cpp  block_matrix.cpp  block_matrix.hpp  dense_matrix.hpp
Exercise sessions/Root_finder/: Bisection.cpp  Newton.cpp  Newton.h  Robust.cpp  bn_allinone.cpp
Exercise sessions/Tensors/: Tensor.cpp  Tensor.h
Exercises_attempts/Date_class/: CMakeLists.txt  Date.cpp  Date.h
Labs/Arcade_Players/: CMakeLists.txt  Player.cc  Player.hh  main.cc  search.cc
Labs/Lab/: FileManager.cpp  StudentsData.cpp  StudentsData.h  main.cpp
Labs/Social_Net/: main.cpp  social_network.cpp  social_network.hpp  user.cpp
Labs/Streams/: CMakeLists.txt  Exam.h  FileManager.cpp  StudentsData.h  main.cpp
Labs/counter_queue/: CMakeLists.txt  counter_queue_initial.cpp  counter_queue_initial.h  main.cpp
Lect1/: CMakeLists.txt
Lect10/: CMakeLists.txt
Lect10/BookSalesDynamicBinding/: Disc_quote.h  Inheritance2.cpp  Quote.cpp  Quote.h  Unfair_quote.cpp  Unfair_quote.h
Lect11/: CMakeLists.txt
Lect11/SharedPtr_Count/: Shared_ptr_main.cpp
Lect11/StrLPVector/: StrLPVector_main.cpp
Lect12/: CMakeLists.txt
Lect12/BoxesV1/: Box.h  BoxV1_main.cpp
Lect12/BoxesV2/: BoxV2_main.cpp
Lect12/CopyControl/: CpyControl_main.cpp
Lect16/: CMakeLists.txt
Lect20/: main.cpp
Lect5/: CMakeLists.txt  bin_search.cpp
Lect6/: CMakeLists.txt
Lect6/Matlab_vectors/MatlabVectorOperatorInClass/: MatlabVector.cpp  MatlabVector.h  MatlabVectorOperatorInClass.cpp
Lect6/returnRef/: BaseKO.cpp  BaseKO.h  BaseOK.cpp  BaseOK.h  returnRef.cpp
Lect6/use_of_this/: X_fixed.cpp  use_of_this.cpp
Lect7/ConstOverload/: C.cpp  C.h  CMakeLists.txt  main.cpp
Lect8/: CMakeLists.txt
(+16 files in other folders)
